Изменение html и добавлен js

--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="style.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
 <body>
   <button>привет</button>
+  <button>мяу</button>
+  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam molestiae, pariatur dolore est eum consectetur magni nobis, modi amet obcaecati quos tempore natus neque eos perspiciatis doloremque numquam et praesentium?</p>
+
+  
 </body>
 </html>
